--- a/style.css
+++ b/style.css
@@ -172,7 +172,9 @@ h3 {
   line-height: 15.4px;
 }
 
-ul, li, p {
+ul,
+li,
+p {
   font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
   font-size: 18px;
   font-style: normal;
@@ -202,4 +204,26 @@ pre {
 #icon {
   height: 30px;
   margin: 2px 4px;
+}
+
+/* Centered text */
+.text-image-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.image-center {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.alegreya-head {
+  font-family: "Alegreya", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 40px;
 }
